--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,12 @@ dependencies = ["spacy>=2.3.7", "numpy>=1.21.5"]
 
 
 [project.optional-dependencies]
-dev = ["pytest", "black"]
+dev = [
+    "pytest",
+    "black",
+    "spacy-lookups-data",
+    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0.tar.gz",
+]
 docs = ["sphinx"]
 
 
