chore(dependencies): update spaCy to 3.2.1, add coverage for test reporting, and replace en_core_web_md with en_core_web_sm
Updated dependencies to ensure compatibility with spaCy 3 and optimize testing resources.

Changes:
- Updated \`spacy\` dependency from \`2.3.7\` to \`3.2.1\` for compatibility with spaCy 3 functions such as \`nlp.initialize()\`.
- Replaced \`en_core_web_md\` with \`en_core_web_sm\` in development, leveraging a smaller model to reduce memory usage and improve test performance.
- Added \`coverage\` to dev dependencies to enable test coverage reporting, enhancing the test suite by tracking coverage.

These updates ensure alignment with spaCy 3 functionality, optimize resource usage for testing, and introduce test coverage tracking to improve code quality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,16 @@ version = "0.1.0"
 description = "A spaCy library for Named Entity Recognition with Elastic Weight Consolidation."
 license = { text = "MIT" }
 authors = [{ name = "DarkRockMountain", email = "dev@darkrockmountain.com" }]
-dependencies = ["spacy>=2.3.7", "numpy>=1.21.5"]
+dependencies = ["spacy>=3.2.1", "numpy>=1.20.0"]
 
 
 [project.optional-dependencies]
 dev = [
     "pytest",
+    "coverage",
     "black",
     "spacy-lookups-data",
-    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0.tar.gz",
+    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz",
 ]
 docs = ["sphinx"]
 
