refactor(project-structure): move package to main directory and update configurations
- Changed project structure by moving the `spacy_ewc` package from `src/` to the main project directory
  - Updated `pyproject.toml` to reflect this change, removing the `src` directory and configuring the main package as `spacy_ewc`
  - Adjusted `tool.setuptools.packages.find` in `pyproject.toml` to include the new structure

- Implemented Elastic Weight Consolidation (EWC) functionality:
  - Added `EWC` class for applying EWC penalties during training to mitigate catastrophic forgetting
  - Created `VectorDict` utility for managing model parameters and Fisher Information Matrix
  - Introduced NER-specific training methods with EWC support in `ner_trainer`

- Set up additional helper utilities:
  - `extract_labels.py` in `spacy_ewc.utils`: Extracts entity labels from annotated data
  - `generate_spacy_entities.py` in `spacy_ewc.utils`: Creates entity annotations using the SpaCy NLP pipeline

- Updated `pyproject.toml` with organized dev dependencies:
  - Added `flake8` and its configuration file `.flake8` to ignore specific errors and exclude directories for streamlined linting
  - Ignored long-line (E501) and line break (W503) warnings and excluded directories like `venv`, `build`, and `tests` in `.flake8`

- Initialized modules with `__init__.py` files to facilitate modular imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ dependencies = ["spacy>=3.8.2", "numpy>=2.0.2"]
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "coverage",
-    "black",
+    "pytest-cov",
     "spacy-lookups-data",
+    "flake8",
+    "black",
     "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
 ]
 docs = ["sphinx"]
@@ -29,5 +30,6 @@ homepage = "https://github.com/darkrockmountain/spacy-ewc"
 repository = "https://github.com/darkrockmountain/spacy-ewc"
 documentation = "https://github.com/darkrockmountain/spacy-ewc#readme"
 
+# Specify the package directory explicitly to avoid the "multiple top-level packages" error
 [tool.setuptools.packages.find]
-where = ["src"]
+include = ["spacy_ewc*"]
