--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -1,10 +1,7 @@
 name: Test and Lint
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+# The Test and Lint is executed for all branches.
+on: [push, pull_request]
 
 jobs:
   test-lint:
