--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[dev]"
+          python -m spacy download en_core_web_sm
 
       - name: Run tests with coverage
         run: pytest --cov=spacy_ewc --cov-report xml tests/
