--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[dev]"
+          python -m spacy download en_core_web_sm
 
       - name: Run tests
         run: pytest -x --disable-warnings
