ci(workflows): add minimal permissions to coverage workflow
Defined explicit permissions for contents as read-only in the coverage workflow. This change addresses SSF recommendations by ensuring the GitHub Actions token only has the necessary permissions to perform code coverage analysis. Reduces security exposure by adhering to the principle of least privilege.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,10 @@ on:
     types: [published, prereleased]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   publish:
     name: Upload release to PyPI
