--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,6 +2,10 @@ name: Documentation
 
 on: workflow_dispatch
 
+permissions:
+  contents: read
+  pages: write
+
 jobs:
   build-docs:
     runs-on: ubuntu-latest
